scrollbar fix

--- a/src/css/overview-angular.less
+++ b/src/css/overview-angular.less
@@ -216,7 +216,7 @@ a.backlink {
 .blinkenlightTabContainer {
   &:extend(.flexDisplay);
   &:extend(.flexDirectionColumn);
-  overflow:scroll;
+  overflow:auto;
 }
 
 .blinkenlightPopupButtons {
